--- a/templates/vsftpd.conf.erb
+++ b/templates/vsftpd.conf.erb
@@ -161,3 +161,11 @@ pam_service_name=vsftpd
 # This option specifies the location of the RSA certificate to use for SSL
 # encrypted connections.
 rsa_cert_file=/etc/ssl/private/vsftpd.pem
+
+<% if @ec2_public_ipv4 -%>
+# Passive mode
+pasv_enable=YES
+pasv_min_port=1024
+pasv_max_port=1048
+pasv_address=<%= @ec2_public_ipv4 %>
+<% end -%>
