--- a/templates/vsftpd.conf.erb
+++ b/templates/vsftpd.conf.erb
@@ -72,8 +72,10 @@ connect_from_port_20=YES
 # If you want, you can arrange for uploaded anonymous files to be owned by
 # a different user. Note! Using "root" for uploaded files is not
 # recommended!
+<% unless scope.lookupvar('vsftpd::anonymous_enable') -%>
 chown_uploads=YES
 chown_username=ftp
+<% end %>
 #
 # You may override where the log file goes if you like. The default is shown
 # below.
@@ -84,7 +86,7 @@ chown_username=ftp
 #xferlog_std_format=YES
 #
 # You may change the default value for timing out an idle session.
-idle_session_timeout=120
+idle_session_timeout=<%= scope.lookupvar('vsftpd::idle_session_timeout') %>
 #
 # You may change the default value for timing out a data connection.
 #data_connection_timeout=120
@@ -110,7 +112,8 @@ idle_session_timeout=120
 #ascii_download_enable=YES
 #
 # You may fully customise the login banner string:
-#ftpd_banner=Welcome to blah FTP service.
+ftpd_banner=<%= scope.lookupvar('vsftpd::ftpd_banner') %>
+
 #
 # You may specify a file of disallowed anonymous e-mail addresses. Apparently
 # useful for combatting certain DoS attacks.
@@ -160,7 +163,16 @@ pam_service_name=vsftpd
 #
 # This option specifies the location of the RSA certificate to use for SSL
 # encrypted connections.
+<% if scope.lookupvar('vsftpd::enable_ssl') -%>
+ssl_enable=YES
+allow_anon_ssl=NO
+force_local_data_ssl=YES
+force_local_logins_ssl=YES
+ssl_tlsv1=YES
+ssl_sslv2=NO
+ssl_sslv3=NO
 rsa_cert_file=/etc/ssl/private/vsftpd.pem
+<% end -%>
 
 <% if @ec2_public_ipv4 -%>
 # Passive mode
