ssl_enable=YES not working anymore

--- a/templates/vsftpd.conf.erb
+++ b/templates/vsftpd.conf.erb
@@ -164,7 +164,7 @@ pam_service_name=vsftpd
 # This option specifies the location of the RSA certificate to use for SSL
 # encrypted connections.
 <% if scope.lookupvar('vsftpd::enable_ssl') -%>
-ssl_enable=YES
+#ssl_enable=YES
 allow_anon_ssl=NO
 force_local_data_ssl=YES
 force_local_logins_ssl=YES
